# SemanticNews

./: .gitignore  CMakeLists.txt  README.md  config.json
embedding_service/: .gitignore  main.py  models.py  pytest.ini  requirements.txt  test_service.py
src/: AppController.cpp  AppController.h  DataStore.cpp  DataStore.h  main.cpp
src/engine/: RelevanceEngine.cpp  RelevanceEngine.h
src/models/: Event.h  Group.h  Headline.h  HeadlineMatch.h
src/network/: EmbeddingClient.cpp  EmbeddingClient.h  RSSFetcher.cpp  RSSFetcher.h
src/tests/: README.md  test_relevance_engine.cpp
src/ui/: EventBuilderWidget.cpp  EventBuilderWidget.h  LandingPageWidget.cpp  LandingPageWidget.h  MonitorWidget.cpp  MonitorWidget.h
src/worker/: MonitorWorker.cpp  MonitorWorker.h
